test/cases/parser/Ref5.errors
src/Ref5.b:4:17: Syntax error (cannot use 'old' with 'return')
